@@ -1,6 +1,10 @@
 weewx change history
 --------------------
 
+Hardened the WMR100 driver against malformed packets.
+
+
+
 2.6.2 02/16/14
 
 Fixed bug that crashes WMR200 driver if outTemp is missing.
